# appimage-auto

./: .gitignore  Cargo.toml  README.md  install.sh  justfile  release.toml  uninstall.sh
.github/workflows/: release.yml
appimage-auto/: uninstall.sh
autostart/: appimage-auto.desktop
config/: default.toml
desktop/: appimage-auto-gui.desktop
src/: appimage.rs  config.rs  daemon.rs  desktop.rs  lib.rs  notifications.rs  state.rs  watcher.rs
src/gui/: app.rs  app_list_page.rs  app_row.rs  autostart.rs  dialogs.rs  mod.rs  settings_page.rs  status_page.rs  watch_dir_row.rs
systemd/: appimage-auto.service
