[package]
name = "appimage-auto"
version = "0.1.0"
edition = "2024"
description = "Automatic AppImage integration daemon for Linux desktop environments"
authors = ["Caleb"]
license = "MIT"

[[bin]]
name = "appimage-auto"
path = "src/bin/appimage-auto.rs"

[lib]
name = "appimage_auto"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching (inotify wrapper)
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.6"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2"
directories = "6"
md5 = "0.7"
shellexpand = "3"
ctrlc = "3"
tempfile = "3"

# Optional desktop notifications
notify-rust = { version = "4", optional = true }

[features]
default = []
notifications = ["notify-rust"]

[dev-dependencies]
tempfile = "3"
