[package]
name = "appimage-auto"
version = "0.2.1"
edition = "2024"
description = "Automatic AppImage integration daemon for Linux desktop environments"
authors = ["Caleb"]
license = "AGPL-3.0"

[[bin]]
name = "appimage-auto"
path = "src/bin/appimage-auto.rs"

[lib]
name = "appimage_auto"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching (inotify wrapper)
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"

# Configuration
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2"
directories = "6"
md5 = "0.8"
shellexpand = "3"
ctrlc = "3"
tempfile = "3"

# Optional desktop notifications
notify-rust = { version = "4", optional = true }

[features]
default = ["notifications"]
notifications = ["notify-rust"]
gui = ["relm4", "libadwaita", "dirs"]

[[bin]]
name = "appimage-auto-gui"
path = "src/bin/appimage-auto-gui.rs"
required-features = ["gui"]

[dependencies.relm4]
version = "0.10"
optional = true
features = ["libadwaita"]

[dependencies.libadwaita]
version = "0.8"
optional = true
features = ["v1_4"]

[dependencies.dirs]
version = "6"
optional = true

[dev-dependencies]
tempfile = "3"
